[gd_scene load_steps=2 format=1]

[ext_resource path="res://scripts/Loot.gd" type="Script" id=1]

[node name="Loot" type="Panel" groups=[
"loot",
]]

visibility/self_opacity = 0.5
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 380.0
margin/top = 210.0
margin/right = -420.0
margin/bottom = -190.0
script/script = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 320.0
margin/bottom = 380.0

[node name="ItemList1" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 20.0
margin/right = 780.0
margin/bottom = 380.0

[node name="Butto" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 30.0
margin/right = 396.0
margin/bottom = 50.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">>>"
flat = false

[node name="Button" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 130.0
margin/right = 398.0
margin/bottom = 150.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">>"
flat = false

[node name="Button1" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 230.0
margin/right = 398.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<<"
flat = false

[node name="Exit" type="Button" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 330.0
margin/right = 400.0
margin/bottom = 350.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]

[connection signal="item_selected" from="ItemList1" to="." method="_on_ItemList1_item_selected"]

[connection signal="pressed" from="Butto" to="." method="_on_Butto_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]


